# ro

./: record_bag.sh
src/camera_selector/: package.xml  setup.cfg  setup.py
src/camera_selector/resource/: vision_module_camera_selector
src/camera_selector/vision_module_camera_selector/: __init__.py  bbox_projection.py  camera_selector_node.py
src/vision_module_msgs/: CMakeLists.txt  package.xml
src/vision_module_msgs/srv/: SelectCamera.srv
