<?xml version="1.0"?>
<package format="3">
  <name>vision_module_camera_selector</name>
  <version>0.1.0</version>
  <description>Best-view camera selection node for vision-module.</description>

  <maintainer email="dulyoung4d@gmail.com">Ian Dul</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_module_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>