<?xml version="1.0"?>
<package format="3">
  <name>vision_module_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages and services for vision module.</description>

  <maintainer email="dulyoung4d@gmail.com">Ian Dul</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>